// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bsky views with mutes from mute lists flags mutes in threads 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
      "repost": "record(2)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(7)",
            "following": "record(6)",
            "muted": true,
            "mutedByList": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(5)",
              "viewer": Object {
                "muted": true,
              },
            },
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(1)@jpeg",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "following": "record(9)",
            "muted": true,
            "mutedByList": Object {
              "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(5)",
              "viewer": Object {
                "muted": true,
              },
            },
          },
        },
        "cid": "cids(3)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/image/sig()/rs:fit:2000:2000:1:0/plain/user(4)/cids(4)@jpeg",
              "thumb": "https://bsky.public.url/image/sig()/rs:fit:1000:1000:1:0/plain/user(4)/cids(4)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(3)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(8)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(4)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(8)",
        "viewer": Object {},
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists returns a users own list mutes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "lists": Array [
    Object {
      "creator": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": Object {
        "muted": true,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
      "creator": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(2)",
      "viewer": Object {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists returns lists associated with a user 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "lists": Array [
    Object {
      "creator": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": Object {
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
      "creator": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(2)",
      "viewer": Object {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists returns the contents of a list 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "items": Array [
    Object {
      "subject": Object {
        "did": "user(0)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": true,
          "mutedByList": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": Object {
              "muted": true,
            },
          },
        },
      },
    },
    Object {
      "subject": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(3)/cids(0)@jpeg",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(2)",
          "muted": true,
          "mutedByList": Object {
            "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": Object {
              "muted": true,
            },
          },
        },
      },
    },
  ],
  "list": Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
    "creator": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(0)@jpeg",
      "description": "its me!",
      "did": "user(4)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(3)",
        "muted": false,
      },
    },
    "description": "big list of mutes",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "name": "alice mutes",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
    "viewer": Object {
      "muted": true,
    },
  },
}
`;
